--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "winston": "^1.0.1",
     "angular": "^1.4.3",
     "pg": "^4.4.0",
-    "pg-hstore": "^2.3.2"
+    "pg-hstore": "^2.3.2",
+    "ejs": "^2.3.1",
+    "cool-ascii-faces": "~1.3.x"
   }
 }
