--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pg": "~4.4.3",
     "pg-hstore": "~2.3.2",
     "ejs": "~2.3.4",
-    "cool-ascii-faces": "~1.3.x"
+    "cool-ascii-faces": "~1.3.x",
+    "ismobilejs": "~0.3.9"
   }
 }
