--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.6.1",
     "body-parser": "^1.15.2",
     "bower": "^1.8.0",
+    "compression": "1.6.2",
     "cookie-parser": "^1.4.3",
     "cool-ascii-faces": "^1.3.4",
     "debug": "^2.5.1",
