--- a/package.json
+++ b/package.json
@@ -12,19 +12,26 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-cookies": "^1.6.4",
+    "autosize": "^3.0.20",
     "body-parser": "^1.15.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "compression": "1.6.2",
     "cookie-parser": "^1.4.3",
     "cool-ascii-faces": "^1.3.4",
     "debug": "^2.5.1",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
+    "gsap": "^1.19.1",
+    "jquery": "^3.2.1",
+    "jquery-mousewheel": "^3.1.13",
+    "jquery-typeahead": "^2.8.0",
     "morgan": "^1.7.0",
     "ngstorage": "^0.3.11",
     "pg": "^4.5.6",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.28.0",
     "serve-favicon": "^2.3.2",
+    "tether": "^1.4.0",
     "winston": "^1.1.2"
   }
 }
