--- a/package.json
+++ b/package.json
@@ -15,16 +15,25 @@
     "autosize": "^3.0.20",
     "body-parser": "^1.15.2",
     "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap-select": "^1.12.2",
+    "chart.js": "^2.5.0",
+    "chartist": "^0.10.1",
+    "chartist-plugin-tooltip": "0.0.11",
     "compression": "1.6.2",
     "cookie-parser": "^1.4.3",
     "cool-ascii-faces": "^1.3.4",
+    "datatables": "^1.10.13",
+    "datatables-fixedcolumns": "^3.1.0",
+    "datatables-responsive": "^1.0.7",
     "debug": "^2.5.1",
+    "editable-table": "^1.0.3",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "gsap": "^1.19.1",
     "jquery": "^3.2.1",
     "jquery-mousewheel": "^3.1.13",
     "jquery-typeahead": "^2.8.0",
+    "jscrollpane": "^2.0.22",
     "morgan": "^1.7.0",
     "ngstorage": "^0.3.11",
     "pg": "^4.5.6",
