--- a/package.json
+++ b/package.json
@@ -32,14 +32,19 @@
     "gsap": "^1.19.1",
     "jquery": "^3.2.1",
     "jquery-mousewheel": "^3.1.13",
+    "jquery-sortable": "^0.9.13",
     "jquery-typeahead": "^2.8.0",
+    "jquery.scrollto": "^2.1.2",
     "jscrollpane": "^2.0.22",
     "morgan": "^1.7.0",
     "ngstorage": "^0.3.11",
     "pg": "^4.5.6",
     "pg-hstore": "^2.3.2",
+    "scrollto": "^1.0.1",
+    "select2": "^4.0.3",
     "sequelize": "^3.28.0",
     "serve-favicon": "^2.3.2",
+    "sweetalert2": "^6.6.0",
     "tether": "^1.4.0",
     "winston": "^1.1.2"
   }
