--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "datatables-fixedcolumns": "^3.1.0",
     "datatables-responsive": "^1.0.7",
     "debug": "^2.5.1",
+    "dropify": "^0.2.2",
     "editable-table": "^1.0.3",
     "ejs": "^2.5.5",
     "express": "^4.14.0",
