--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "angular": "^1.6.1",
     "angular-cookies": "^1.6.4",
+    "angular-hammer": "^2.2.0",
     "autosize": "^3.0.20",
     "body-parser": "^1.15.2",
     "bootstrap": "^4.0.0-alpha.6",
@@ -31,6 +32,7 @@
     "ejs": "^2.5.5",
     "express": "^4.14.0",
     "gsap": "^1.19.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "jquery-mousewheel": "^3.1.13",
     "jquery-sortable": "^0.9.13",
