--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^2.5.0",
     "chartist": "^0.10.1",
     "chartist-plugin-tooltip": "0.0.11",
+    "cloudinary": "^1.9.0",
     "compression": "1.6.2",
     "cookie-parser": "^1.4.3",
     "cool-ascii-faces": "^1.3.4",
