--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.6.1",
     "angular-cookies": "^1.6.4",
     "angular-hammer": "^2.2.0",
+    "angular-sanitize": "^1.6.6",
     "autosize": "^3.0.20",
     "body-parser": "^1.15.2",
     "bootstrap": "^4.0.0-alpha.6",
@@ -34,6 +35,8 @@
     "express": "^4.14.0",
     "gsap": "^1.19.1",
     "hammerjs": "^2.0.8",
+    "i18next": "^10.0.1",
+    "i18next-xhr-backend": "^1.4.3",
     "jquery": "^3.2.1",
     "jquery-mousewheel": "^3.1.13",
     "jquery-sortable": "^0.9.13",
@@ -41,9 +44,11 @@
     "jquery.scrollto": "^2.1.2",
     "jscrollpane": "^2.0.22",
     "morgan": "^1.7.0",
+    "ng-i18next": "^1.0.5",
     "ngstorage": "^0.3.11",
     "pg": "^4.5.6",
     "pg-hstore": "^2.3.2",
+    "popper.js": "^1.12.5",
     "scrollto": "^1.0.1",
     "select2": "^4.0.3",
     "sequelize": "^3.28.0",
