--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "angular-sanitize": "^1.6.6",
     "autosize": "^3.0.20",
     "body-parser": "^1.15.2",
-    "bootstrap": "^4.0.0-alpha.6",
+    "bootstrap": "4.0.0-alpha.6",
     "bootstrap-select": "^1.12.2",
     "chart.js": "^2.5.0",
     "chartist": "^0.10.1",
