--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.6.1",
     "angular-cookies": "^1.6.4",
     "angular-hammer": "^2.2.0",
+    "angular-load": "^0.5.0",
     "angular-sanitize": "^1.6.6",
     "autosize": "^3.0.20",
     "body-parser": "^1.15.2",
