--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "pg": "^4.5.6",
     "pg-hstore": "^2.3.2",
     "popper.js": "^1.12.5",
+    "roll": "^1.2.0",
     "scrollto": "^1.0.1",
     "select2": "^4.0.3",
     "sequelize": "^3.28.0",
